--- a/application/index/view/blueprint/process-edit.html
+++ b/application/index/view/blueprint/process-edit.html
@@ -50,38 +50,71 @@
                     });
                 })
             }
+
         </script>
+
         <div id="motaikunag" style="display: none;">
           <table class="layui-table">
             <tr>
-              <td onclick="inputTs('~')">~</td>
-              <td onclick="inputTs('!')">!</td>
-              <td onclick="inputTs('#')">#</td>
-              <td onclick="inputTs('$')">$</td>
+              <td onclick="inputTs('Φ')">Φ</td>
+              <td onclick="inputTs('∥')">∥</td>
+              <td onclick="inputTs('◎')">◎</td>
+              <td onclick="inputTs('⊙')">⊙</td>
             </tr>
             <tr>
-              <td onclick="inputTs('￥')">￥</td>
-              <td onclick="inputTs('%')">%</td>
-              <td onclick="inputTs('^')">^</td>
-              <td onclick="inputTs('&')">&</td>
+              <td onclick="inputTs('○')">○</td>
+              <td onclick="inputTs('%')">□</td>
+              <td onclick="inputTs('□')">□</td>
+              <td onclick="inputTs('≡')">≡</td>
             </tr>
             <tr>
-              <td onclick="inputTs('*')">*</td>
-              <td onclick="inputTs('\\')">\</td>
-              <td onclick="inputTs('/')">/</td>
-              <td onclick="inputTs('?')">?</td>
+              <td onclick="inputTs('⊥')">⊥</td>
+              <td onclick="inputTs('√')">√</td>
+              <td onclick="inputTs('˚')">˚</td>
+              <td onclick="inputTs('⌒')">⌒</td>
             </tr>
             <tr>
-              <td onclick="inputTs('￥')">￥</td>
-              <td onclick="inputTs('%')">%</td>
-              <td onclick="inputTs('^')">^</td>
-              <td onclick="inputTs('&')">&</td>
+
+              <td onclick="inputTs('⊕')">⊕</td>
+              <td onclick="inputTs('℃')">℃</td>
+              <td onclick="inputTs('±')">±</td>
+              <td onclick="inputTs('∠')">∠</td>
             </tr>
             <tr>
-              <td onclick="inputTs('*')">*</td>
-              <td onclick="inputTs('\\')">\</td>
-              <td onclick="inputTs('/')">/</td>
-              <td onclick="inputTs('?')">?</td>
+              <td onclick="inputTs('⊿')">⊿</td>
+              <td onclick="inputTs('◁')">◁</td>
+              <td onclick="inputTs('↗')">↗</td>
+              <td onclick="inputTs('×')">×</td>
+            </tr>
+            <tr>
+              <td onclick="inputTs('÷')">÷</td>
+              <td onclick="inputTs('≦')">≦</td>
+              <td onclick="inputTs('≧')">≧</td>
+              <td onclick="inputTs('≠')">≠</td>
+            </tr>
+            <tr>
+              <td onclick="inputTs('☆')">☆</td>
+              <td onclick="inputTs('Ⅰ')">Ⅰ</td>
+              <td onclick="inputTs('Ⅱ')">Ⅱ</td>
+              <td onclick="inputTs('Ⅲ')">Ⅲ</td>
+            </tr>
+            <tr>
+              <td onclick="inputTs('Ⅳ')">Ⅳ</td>
+              <td onclick="inputTs('Ⅴ')">Ⅴ</td>
+              <td onclick="inputTs('Ⅵ')">Ⅵ</td>
+              <td onclick="inputTs('Ⅶ')">Ⅶ</td>
+            </tr>
+            <tr>
+              <td onclick="inputTs('Ⅷ')">Ⅷ</td>
+              <td onclick="inputTs('Ⅸ')">Ⅸ</td>
+              <td onclick="inputTs('Ⅹ')">Ⅹ</td>
+              <td onclick="inputTs('Ⅺ')">Ⅺ</td>
+            </tr>
+            <tr>
+              <td onclick="inputTs('Ⅷ')">Ⅻ</td>
+              <td onclick="inputTs('')"></td>
+              <td onclick="inputTs('')"></td>
+              <td onclick="inputTs('')"></td>
             </tr>
           </table>
         </div>
