#工序批量删除

--- a/application/index/view/blueprint/process.html
+++ b/application/index/view/blueprint/process.html
@@ -17,7 +17,6 @@
               <th>类型</th>
               <th>客户</th>
               <th>批量</th>
-
               <th>操作</th>
             </tr>
             </thead>
@@ -47,9 +46,10 @@
     </div>
   </fieldset>
   <xblock>
-    <button class="layui-btn layui-btn-danger" onclick="delAll()"><i class="layui-icon"></i>批量删除</button>
+    <button class="layui-btn layui-btn-danger" onclick="delAll('{$drawing_detail_id}')"><i class="layui-icon"></i>批量删除</button>
     <button class="layui-btn" onclick="x_admin_show('工序信息','{:url(\'index/blueprint/addProcess\',[\'id\'=>$drawing_detail_id])}',500,500)"><i class="layui-icon"></i>添加</button>
-    <button class="layui-btn" onclick ="sort('{$drawing_detail_id}')" >一键排序</button>
+      <button class="layui-btn" onclick ="sort('{$drawing_detail_id}')" >一键排序</button>
+      <button class="layui-btn" onclick ="sort('{$drawing_detail_id}')" >一键复制</button>
     <span class="x-right" style="line-height:40px">共有数据：{$count} 条</span>
   </xblock>
   <div class="layui-row">
@@ -61,6 +61,7 @@
               <th>
                 <div class="layui-unselect header layui-form-checkbox" lay-skin="primary"><i class="layui-icon">&#xe605;</i></div>
               </th>
+              <th>操作</th>
               <th>工艺编号</th>
               <th>工艺类型</th>
               <th>工艺说明</th>
@@ -70,15 +71,19 @@
               <th>定额报价</th>
               <th>外协实际价格</th>
               <th>备注</th>
-              <th>操作</th>
             </tr>
           </thead>
           <tbody>
           {volist name="processInfo" id="processInfoList"}
             <tr>
               <td>
-                <div class="layui-unselect layui-form-checkbox" lay-skin="primary" data-id=''><i class="layui-icon">&#xe605;</i></div>
+                <div class="layui-unselect layui-form-checkbox" lay-skin="primary" data-id='{$processInfoList.id}'><i class="layui-icon">&#xe605;</i></div>
               </td>
+                <td>
+                    <!--<a title="详" onclick="x_admin_show('工序详情 <span class=\'layui-badge layui-bg-blue\'>{$processInfoList.process_id}</span> 修改操作','{:url(\'index/blueprint/editProcess\',[\'id\'=>$processInfoList.id])}',450)" href="javascript:;"><i class="layui-icon">详</i></a>-->
+                    <a title="改" onclick="x_admin_show('修改工序 <span class=\'layui-badge layui-bg-blue\'>{$processInfoList.process_id}</span> 修改操作','{:url(\'index/blueprint/editProcess\',[\'id\'=>$processInfoList.id])}',450)" href="javascript:;"><i class="layui-icon">改</i></a>
+                    <a title="删" onclick="delete_process(this,'{$processInfoList.id}','{$processInfoList.drawing_detial_id}')"><i class="layui-icon">删</i></a>
+                </td>
               <td>
                 <?php echo substr($processInfoList['process_id'],strpos($processInfoList['process_id'],'P')+1); ?>
                   <span class="layui-table-sort layui-inline">
@@ -100,12 +105,6 @@
               <td>{$processInfoList.quota_quotation}</td>
               <td>{$processInfoList.process_real_price}</td>
               <td>{$processInfoList.remark}</td>
-
-              <td>
-                <!--<a title="详" onclick="x_admin_show('工序详情 <span class=\'layui-badge layui-bg-blue\'>{$processInfoList.process_id}</span> 修改操作','{:url(\'index/blueprint/editProcess\',[\'id\'=>$processInfoList.id])}',450)" href="javascript:;"><i class="layui-icon">详</i></a>-->
-                <a title="改" onclick="x_admin_show('修改工序 <span class=\'layui-badge layui-bg-blue\'>{$processInfoList.process_id}</span> 修改操作','{:url(\'index/blueprint/editProcess\',[\'id\'=>$processInfoList.id])}',450)" href="javascript:;"><i class="layui-icon">改</i></a>
-                <a title="删" onclick="delete_process(this,'{$processInfoList.id}','{$processInfoList.drawing_detial_id}')"><i class="layui-icon">删</i></a>
-              </td>
             </tr>
           {/volist}
           </tbody>
@@ -118,6 +117,31 @@
   </div>
 </div>
 <script>
+    //批量删除
+    function delAll (drawing_detail_id) {
+        var data = tableCheck.getData();
+        layer.confirm('确认要删除吗？',function(index){
+            //捉到所有被选中的，发异步进行删除
+            $.ajax({
+                url:"/index/Blueprint/processDelAll",
+                type:"POST",
+                dataType:"json",
+                data:{
+                    dra_id:drawing_detail_id,
+                    data:data   //数据
+                },
+                success:function (res) {
+                    if(res === 1 ){
+                        layer.alert("删除成功", {icon: 6},function () {
+                            window.location.reload();  //刷新父级页面
+                        });
+                    }else {
+                        layer.alert("删除失败", {icon: 5});
+                    }
+                },
+            });
+        });
+    }
     //往上走
     $(".layui-table-sort-asc").click(function () {
         var url = "{:url('/index/Blueprint/updateAsc')}";
@@ -197,6 +221,8 @@
             },"json");
         });
     }
+
+
 </script>
 </body>
 </html>
