修改添加工序细节

--- a/application/index/view/blueprint/add-process.html
+++ b/application/index/view/blueprint/add-process.html
@@ -133,7 +133,7 @@
         <div class="layui-form-item">
             <label for="process_quota" class="layui-form-label">工序定额h(小时)</label>
             <div class="layui-input-inline">
-                <input type="text" id="process_quota" name="process_quota"  autocomplete="off" class="layui-input" placeholder="￥" >
+                <input type="text" id="process_quota" name="process_quota"  autocomplete="off" class="layui-input"  >
             </div>
         </div>
         <div class="layui-form-item">
@@ -150,9 +150,9 @@
             </div>
         </div>
         <div class="layui-form-item">
-            <label class="layui-form-label">定额报价</label>
+            <label class="layui-form-label">报价定额h(小时)</label>
             <div class="layui-input-inline">
-                <input type="text" id="quota_quotation"  placeholder="￥"  name="quota_quotation" autocomplete="off" class="layui-input" >
+                <input type="text" id="quota_quotation" name="quota_quotation" autocomplete="off" class="layui-input" >
             </div>
         </div>
         <div class="layui-form-item">
