--- a/application/index/view/blueprint/add-drawing-detial.html
+++ b/application/index/view/blueprint/add-drawing-detial.html
@@ -37,7 +37,7 @@
                 <input type="text" class="layui-input" placeholder="公司编号" id="addMidNumberInput">
             </div>
             <div class="layui-input-inline" id="mes">
-                <input type="text" class="layui-input" placeholder="描述信息">
+                <input type="text" class="layui-input" placeholder="编号描述">
             </div>
             <button type="button" class="layui-btn" id="createNumber">生成公司编号</button>
             <!--<button type="button" class="layui-btn" onclick="x_admin_show('模具管理','{:url(\'index/mould/mould\')}')" >模具管理</button>-->
