--- a/application/index/view/blueprint/blueprint-outside.html
+++ b/application/index/view/blueprint/blueprint-outside.html
@@ -64,6 +64,7 @@
             </tbody>
           </table>
         </div>
+        <h2>服务器GitHub同步测试</h2>
       </div>
       <div class="page">
         {$blueprintOutside|raw}
