--- a/application/index/view/blueprint/blueprint-outside.html
+++ b/application/index/view/blueprint/blueprint-outside.html
@@ -64,8 +64,8 @@
             </tbody>
           </table>
         </div>
-        <h2>服务器GitHub同步测试</h2>
       </div>
+      <h2 style="color:red">服务器GitHub同步测试</h2>
       <div class="page">
         {$blueprintOutside|raw}
       </div>
