工序一键复制

--- a/application/index/view/blueprint/add-process.html
+++ b/application/index/view/blueprint/add-process.html
@@ -11,7 +11,8 @@
         <div class="layui-form-item">
             <label for="process_id" class="layui-form-label">工艺编号</label>
             <div class="layui-input-inline">
-                <input type="text" id="process_id" disabled="disabled" name="process_id" lay-verify="required" autocomplete="off" class="layui-input" value="{$drawing_detail_id}">
+                <input type="text" id="process_id1" disabled="disabled" name="" lay-verify="required" autocomplete="off" class="layui-input" value="<?php echo substr($drawing_detail_id,strpos($drawing_detail_id,'P')+1); ?>" >
+                <input type="hidden" id="process_id" disabled="disabled" name="process_id" lay-verify="required" autocomplete="off" class="layui-input" value="{$drawing_detail_id}" >
                 <p id="pLog" style="color:red"></p>
             </div>
         </div>
