--- a/application/index/view/blueprint/process.html
+++ b/application/index/view/blueprint/process.html
@@ -49,7 +49,7 @@
     <button class="layui-btn layui-btn-danger" onclick="delAll('{$drawing_detail_id}')"><i class="layui-icon"></i>批量删除</button>
     <button class="layui-btn" onclick="x_admin_show('工序信息','{:url(\'index/blueprint/addProcess\',[\'id\'=>$drawing_detail_id])}',500,500)"><i class="layui-icon"></i>添加</button>
       <button class="layui-btn" onclick ="sort('{$drawing_detail_id}')" >一键排序</button>
-      <button class="layui-btn" onclick ="sort('{$drawing_detail_id}')" >一键复制</button>
+      <button class="layui-btn" {if $count == 0 } disabled {/if}onclick ="x_admin_show('一键复制','{:url(\'index/blueprint/copyProcess\',[\'id\'=>$drawing_detail_id])}',500,400)">一键复制</button>
     <span class="x-right" style="line-height:40px">共有数据：{$count} 条</span>
   </xblock>
   <div class="layui-row">
