修改公司编号和添加模具管理

--- a/application/index/view/public/left.html
+++ b/application/index/view/public/left.html
@@ -129,6 +129,12 @@
                             <cite>外部图纸</cite>
                         </a>
                     </li >
+                    <li>
+                        <a _href="{:url('index/mould/mould')}">
+                            <i class="iconfont">&#xe6a7;</i>
+                            <cite>磨具管理</cite>
+                        </a>
+                    </li >
                 </ul>
             </li>
             <li>
@@ -176,13 +182,13 @@
                     </li >
                 </ul>
             </li>
-            <li>
-                <a _href="{:url('index/mould/mould')}">
-                    <i class="icon iconfont">&#xe6ae;</i>
-                    <cite>模具管理</cite>
-                    <i class="iconfont nav_right">&#xe697;</i>
-                </a>
-            </li>
+            <!--<li>-->
+                <!--<a _href="{:url('index/mould/mould')}">-->
+                    <!--<i class="icon iconfont">&#xe6ae;</i>-->
+                    <!--<cite>模具管理</cite>-->
+                    <!--<i class="iconfont nav_right">&#xe697;</i>-->
+                <!--</a>-->
+            <!--</li>-->
             <li>
                 <a _href="datum.html">
                     <i class="icon iconfont">&#xe705;</i>
